RouteT-GateW.tf
resource "aws_route_table" "rt1" {
    vpc_id = aws_vpc.vpc1.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.gtw1.id
    }

  
}
resource "aws_internet_gateway" "gtw1" {
    vpc_id = aws_vpc.vpc1.id
    tags = {
      Name = "IGW"
    }
 ##Route Table association 
}
resource "aws_route_table_association" "rta1" {
    subnet_id = aws_subnet.public_subnet1.id
    route_table_id = aws_route_table.rt1.id
  
}
resource "aws_route_table_association" "rta2" {
    subnet_id = aws_subnet.public_subnet2.id
    route_table_id = aws_route_table.rt1.id
  
}
